--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fal-ai/client": "^1.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@huggingface/inference": "^3.6.2",
+    "@huggingface/transformers": "^3.4.2",
     "@tailwindcss/cli": "^4.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
